读取静态路径

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8888
 cache.template.tempPath=/opt/site/cache/
+#cache.template.tempPath=E:/
+spring.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, file:${cache.template.tempPath}
