--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.port=8888
 cache.template.tempPath=/opt/site/cache/
 #cache.template.tempPath=E:/
 spring.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, file:${cache.template.tempPath}
+qiniu.accessKey=
+qiniu.secretKey=
+qiniu.bucket=sorryjava
+qiniu.domainOfBucket=p5m79jjxo.bkt.clouddn.com
+qcloud.accessKey=
+qcloud.secretKey=
+qcloud.bucket=sorryjava-1256004268
+qcloud.domainOfBucket=https://sorryjava-1256004268.cos.ap-beijing.myqcloud.com
