--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,13 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.qcloud</groupId>
+			<artifactId>cos_api</artifactId>
+			<version>5.2.4</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
