--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 server.port=8888
+logging.path=/opt/site/logs
 cache.template.tempPath=/opt/site/cache/
 #cache.template.tempPath=E:/
 spring.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, file:${cache.template.tempPath}
-qiniu.accessKey=
-qiniu.secretKey=
-qiniu.bucket=sorryjava
-qiniu.domainOfBucket=p5m79jjxo.bkt.clouddn.com
 qcloud.accessKey=
 qcloud.secretKey=
-qcloud.bucket=sorryjava-1256004268
-qcloud.domainOfBucket=https://sorryjava-1256004268.cos.ap-beijing.myqcloud.com
+qcloud.bucket=gif-1256004268
+qcloud.domainOfBucket=https://gif-1256004268.cos.ap-chengdu.myqcloud.com/out.gif
+qcloud.enable=false
