--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.resources.static-locations=classpath:/META-INF/resources/, classpath:/res
 qcloud.accessKey=
 qcloud.secretKey=
 qcloud.bucket=gif-1256004268
-qcloud.domainOfBucket=https://gif-1256004268.cos.ap-chengdu.myqcloud.com/out.gif
+qcloud.domainOfBucket=https://gif-1256004268.cos.ap-chengdu.myqcloud.com
 qcloud.enable=false
