add docker file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ logging.path=/opt/site/logs
 cache.template.tempPath=/opt/site/cache/
 #cache.template.tempPath=E:/
 spring.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, file:${cache.template.tempPath}
-qcloud.accessKey=
-qcloud.secretKey=
+qcloud.accessKey=AKIDnU0JQMHUM7i6tmoXQILUbtFbEu8PdzIZ
+qcloud.secretKey=UzUzcJ0heDrTai9d8eJ2oppFpSE1obkv
 qcloud.bucket=gif-1256004268
 qcloud.domainOfBucket=https://gif-1256004268.cos.ap-chengdu.myqcloud.com
-qcloud.enable=false
+qcloud.enable=true
