--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -3,8 +3,8 @@ logging.path=/opt/site/logs
 cache.template.tempPath=/opt/site/cache/
 #cache.template.tempPath=E:/
 spring.resources.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, file:${cache.template.tempPath}
-qcloud.accessKey=${ACCESSKEY:AKI***6tmoXQI***FbEu8PdzIZ}
-qcloud.secretKey=${SECRETKEY:UzUz***DrTai9d8****pFpSE1obkv}
-qcloud.bucket=${BUCKET:gif-12***268}
-qcloud.domainOfBucket=${BUCKET_DOMAIN:https://gif-1256004268.cos.ap-chengdu.myqcloud.com}
+qcloud.accessKey=${KEY}
+qcloud.secretKey=${SECRET}
+qcloud.bucket=${BUCKET}
+qcloud.domainOfBucket=${BUCKET_DOMAIN}
 qcloud.enable=${QCLOUD_ENABLE:true}
